# selection_sys

./: .gitmodules  CMakeLists.txt  README.md
doc/: Doxyfile
include/Behavior/: Behavior.hpp
include/Couple/: Couple.hpp
include/Preference/: Preference.hpp
include/SelectionSystem/: SelectionSystem.hpp
include/SelectiveSystem/: SelectiveSystem.hpp
include/Student/: Student.hpp
include/SystemActor/: SystemActor.hpp
include/Training/: Training.hpp
src/: CMakeLists.txt
src/Behavior/: Behavior.cpp
src/Couple/: Couple.cpp
src/Preference/: Preference.cpp
src/SelectionSystem/: SelectionSystem.cpp
src/SelectiveSystem/: SelectiveSystem.cpp
src/Student/: Student.cpp
src/SystemActor/: SystemActor.cpp
src/Training/: Training.cpp
test/: CMakeLists.txt  test_preference.cpp  test_selection_system.cpp  test_student.cpp  test_sys_actor.cpp  test_training.cpp
uml/: diagram.plantuml
